# anonymous-credit-tokens

./: .gitignore  Cargo.toml  README.md  proptest.toml
benches/: anoncreds_bench.rs  benchmark.rs  issuance_bench.rs
docs/: design.tex
examples/: act.rs  issuance.rs
src/: cbor.rs  lib.rs  tests.rs  transcript.rs
