[package]
name = "anonymous-credit-tokens"
version = "0.2.1"
edition = "2024"
description = "An implementation of Anonymous Credit Tokens, an online variant of e-cash"
license-file = "LICENSE"
repository = "https://github.com/SamuelSchlesinger/anonymous-credit-tokens"

[dependencies]
ciborium = "0.2"
blake3 = "1.8.1"
curve25519-dalek = { version = "4.1.3", features = ["group", "ff", "serde", "digest", "zeroize", "precomputed-tables"] }
group = "0.13.0"
proptest = "1.6.0"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
subtle = "2.6.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
hex = "0.4"

[dev-dependencies]
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
